buttom alignment correction

--- a/products/products.css
+++ b/products/products.css
@@ -671,8 +671,8 @@ table {
     margin: auto;
 }
 
-input[type=select] {
-    background-color: white;
+.phillBtn {
+    font-size: 2rem;
     color: #6F7069;
     border: none;
     border-radius: 25px;
@@ -681,7 +681,6 @@ input[type=select] {
     padding-top: 8px;
     padding-bottom: 8px;
     text-align: center;
-    margin: 2%;
 }
 
 .linenav4 {
@@ -696,7 +695,7 @@ input[type=select] {
 .navmap {
     margin-top: 160px; 
     text-align: right;
-    color: #6F7069;
+    color: #a88564;
     font-size: 1.2em;
     margin-right: 25px;
     letter-spacing: 2px;
